<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".Feedback">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/suggest_improve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest_improve"
        android:textColor="#cb5235"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/message"
        android:textSize="20dp"
        android:textColor="#38AC05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:hint="@string/feed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/feedbackMessage"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:maxLines="50"
        android:minLines="10"
        android:scrollbars="vertical"
        android:background="@drawable/border"
        android:hint="@string/feedback2"
        android:gravity="top"
        android:layout_marginTop="30dp"
        android:maxLength="250"
        />

    <TextView
        android:id="@+id/max250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max250"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/rateUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateus"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:progressTint="#cb5235"
            android:scaleX="0.8"
            android:scaleY="0.8"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/your_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_rating"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/rateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_feed"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:background="#cb5235"
        android:textSize="22dp"
        android:padding="5dp"
        android:layout_marginTop="30dp"
        />

</LinearLayout>
</ScrollView>