<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/semicircle"
    tools:context=".IncludeCard">

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="50dp"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/polling_station"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_blue">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/polling_station"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/know_polling_booth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/know_your_polling_station"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>




    <android.support.v7.widget.CardView
        android:id="@+id/candidate"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_violet">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/candidate"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/know_your_candidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/know_your_candidate"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/pwd"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_green">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pwd"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/facility_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/facility_for_pwd"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/thirdgender"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_light_red">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/third_gender"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/facility_third_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/facilities_for_third_gender"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/result"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_yellow">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/result"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/results"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/chandanichowk"
        android:layout_height="200dp"
        android:layout_width="160dp"
        android:layout_gravity="center"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="4dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@drawable/border_orange">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/chandani_chowk"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/about_chandni_chowk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/about_chandani_chowk"
                android:textColor="#000"
                android:textSize="16dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</GridLayout>
</ScrollView>